# kerna

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  check.py  fetch_actions.py  install.ps1  install.sh
docs/: AGENTDOJO_ADAPTER.md  BENCHMARKS.md  BENCHMARK_EXECUTION_PLAN.md  BENCHMARK_PROGRAM.md  BENCHMARK_RESULTS.md  BUDGETS.md  BYOK_PROVIDERS.md  COHORT_ACCEPTANCE_RECORD.md  COHORT_LAUNCH_CHECKLIST.md  EVENT_SCHEMA.md  EVERYDAY.md  GO_TO_MARKET.md  KILLER_DEMO.md  LAUNCH_READINESS_REPORT.md  MCP_UX.md  MOCKMCP.md  PLUGIN_MANIFEST.md  POLICY_ENGINE.md  PRIVATE_ALPHA.md  PRODUCT_RESEARCH_2026.md  RELEASE_RUNBOOK.md  RISK_CARD.md  SECURITY_MODEL.md  USING_KERNA.md  architecture.md  memory.md  permissions.md  plugin-api.md  scheduler.md
examples/: research_agent.md
kernel/: Cargo.toml  kerna.db-shm  kerna.db-wal
kernel/src/: budget.rs  config.rs  cron.rs  embeddings.rs  events.rs  folders.rs  gateway.rs  gateways.rs  main.rs  mcp.rs  mcp_governance.rs  mcp_registry.rs  memory.rs  mockmcp.rs  onboarding.rs  packs.rs  permissions.rs  plugin_manifest.rs  providers.rs  registry.rs  sandbox.rs  scheduler.rs  security.rs  server.rs  tool_packs.rs  trust_layer_validation.rs  utils.rs  watchdog.rs
npm/: README.md  install.js  package.json
plugins/: README.md  registry.json
scripts/: add_starter_plugins.ps1  add_starter_plugins.sh  smoke_test.ps1  smoke_test.sh
ui/: package-lock.json  package.json
website/: README.md  benchmarks.html  download.html  how-it-works.html  (+6 more)
(+98 files in other folders)
