[package]
name = "kerna"
version = "0.1.0"
edition = "2021"
description = "A reliable agentic runtime"
license = "MIT OR Apache-2.0"
repository = "https://github.com/premxai/kerna"
authors = ["Premxai <hello@premxai.com>"]
rust-version = "1.74"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
toml = "0.8"
tokio-cron-scheduler = "0.13"
chrono = "0.4"
sha2 = "0.10"
fs_extra = "1.3.0"
axum = "0.7"
async-trait = "0.1"
dialoguer = "0.12.0"
console = "0.16.4"
